All is Updated with delete selected delete and value to type to add in todo click on add button and Press enter

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                     <button class="submit">Add Todo</button>
                 </div>
                 <div class="lineByLine">
-                    <div class="newCreateLine">
+                    <!-- <div class="newCreateLine">
                         <input id="checkbox" type="checkbox">
-                        <p class="paragraph">Hello</p>
-                        <i class="fa-solid fa-circle-xmark fa-lg"></i>
-                    </div>
+                        <p class="paragraph"></p>
+                        <i id="delete"  class="fa-solid fa-circle-xmark fa-lg"></i>
+                    </div> -->
                 </div>
                 <div class="deleteButton">
-                    <button class="selectedDelete">Delete Selected</button>
+                    <button id="selectedDelete" class="selectedDelete">Delete Selected</button>
                 </div>
             </div>
         </div>
