delete button and crose button color change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <!-- <div class="newCreateLine">
                         <input id="checkbox" type="checkbox">
                         <p class="paragraph"></p>
-                        <i id="delete"  class="fa-solid fa-circle-xmark fa-lg"></i>
+                        <i id="delete"  class="fa-solid fa-circle-xmark fa-lg" style="color: #DC5780;"></i>
                     </div> -->
                 </div>
                 <div class="deleteButton">
